# SPARTA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RaspberryPi_instructions.md
audio_plugins/: CMakeLists.txt  PluginCodes.rtf  build-plugins-vs2017.sln  build-plugins.bat  build-plugins.sh  build-projucer.sh  install-juce.sh  install-vst2_sdk.sh  linux_BUILD_ALL.sh  macOSX_BUILD_ALL.sh  win64_vs2017_BUILD_ALL.sln
audio_plugins/_SPARTA_6DoFconv_/: CMakeLists.txt  sparta_6DoFconv.jucer
audio_plugins/_SPARTA_6DoFconv_/scripts/: postbuild.bat
audio_plugins/_SPARTA_6DoFconv_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  sceneView.cpp  sceneView.h
audio_plugins/_SPARTA_MatrixConv_/: CMakeLists.txt  sparta_matrixconv.jucer
audio_plugins/_SPARTA_MatrixConv_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
audio_plugins/_SPARTA_MultiConv_/: CMakeLists.txt  sparta_multiconv.jucer
audio_plugins/_SPARTA_MultiConv_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
audio_plugins/_SPARTA_ambiBIN_/: CMakeLists.txt  sparta_ambiBIN.jucer
audio_plugins/_SPARTA_ambiBIN_/juce/: channel_configs.rtf
audio_plugins/_SPARTA_ambiBIN_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
audio_plugins/_SPARTA_ambiCroPaC/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  log2dSlider.cpp
audio_plugins/_SPARTA_ambiDEC_/: CMakeLists.txt  sparta_ambiDEC.jucer
audio_plugins/_SPARTA_ambiDEC_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  log2dSlider.cpp  log2dSlider.h  outputCoordsView.cpp  outputCoordsView.h
audio_plugins/_SPARTA_ambiDRC_/: CMakeLists.txt  sparta_ambiDRC.jucer
audio_plugins/_SPARTA_ambiDRC_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TFview.cpp  TFview.h  colourGradient.h
audio_plugins/_SPARTA_ambiENC_/: CMakeLists.txt  sparta_ambiENC.jucer
audio_plugins/_SPARTA_ambiENC_/juce/: channel_configs.rtf
audio_plugins/_SPARTA_ambiENC_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  inputCoordsView.cpp  inputCoordsView.h  pannerView.cpp  pannerView.h
audio_plugins/_SPARTA_ambiRoomSim/: sparta_ambiRoomSim.jucer
audio_plugins/_SPARTA_ambiRoomSim/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  inputCoordsView.cpp  inputCoordsView.h  outputCoordsView.cpp  pannerView.cpp  pannerView.h
audio_plugins/_SPARTA_ambiRoomSim_/: CMakeLists.txt  sparta_ambiRoomSim.jucer
audio_plugins/_SPARTA_ambiRoomSim_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  inputCoordsView.cpp  inputCoordsView.h  outputCoordsView.cpp  outputCoordsView.h  pannerView.cpp  pannerView.h
audio_plugins/_SPARTA_array2sh_/: CMakeLists.txt  sparta_array2sh.jucer
audio_plugins/_SPARTA_array2sh_/juce/: channel_configs.rtf
audio_plugins/_SPARTA_array2sh_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  anaview.cpp  anaview.h  anaview_window.cpp  anaview_window.h  eqview.cpp  eqview.h  eqview_window.cpp  eqview_window.h  sensorCoordsView.cpp  sensorCoordsView.h
audio_plugins/_SPARTA_beamformer_/: CMakeLists.txt  sparta_beamformer.jucer
audio_plugins/_SPARTA_beamformer_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  outputCoordsView.cpp  outputCoordsView.h  overlay.cpp  overlay.h  pannerView.cpp  pannerView.h
audio_plugins/_SPARTA_binauraliser_/: CMakeLists.txt  sparta_binauraliser.jucer
audio_plugins/_SPARTA_binauraliser_/src/: ConfigurationHelper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  inputCoordsView.cpp  inputCoordsView.h  pannerView.cpp  pannerView.h
audio_plugins/_SPARTA_binauraliser_nf_/: CMakeLists.txt  sparta_binauraliser_nf.jucer
audio_plugins/_SPARTA_binauraliser_nf_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  inputCoordsView.cpp  inputCoordsView.h  pannerView.cpp  pannerView.h
audio_plugins/_SPARTA_decorrelator/: CMakeLists.txt
audio_plugins/_SPARTA_decorrelator_/: CMakeLists.txt  sparta_decorrelator.jucer
audio_plugins/_SPARTA_decorrelator_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
audio_plugins/_SPARTA_dirass_/: CMakeLists.txt  sparta_dirass.jucer
audio_plugins/_SPARTA_dirass_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  overlay.cpp  overlay.h
audio_plugins/_SPARTA_matrixConv_/: CMakeLists.txt  sparta_matrixconv.jucer
audio_plugins/_SPARTA_matrixConv_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
audio_plugins/_SPARTA_mcDelay_/juce/: channel_configs.rtf
audio_plugins/_SPARTA_mcDelay_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
audio_plugins/_SPARTA_mcEQ_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
audio_plugins/_SPARTA_multiConv_/: CMakeLists.txt  sparta_multiconv.jucer
audio_plugins/_SPARTA_multiConv_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
audio_plugins/_SPARTA_multiConv__/: sparta_multiconv.jucer
audio_plugins/_SPARTA_multiConv__/src/: PluginProcessor.h
audio_plugins/_SPARTA_panner_/: CMakeLists.txt  sparta_panner.jucer
audio_plugins/_SPARTA_panner_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  (+7 more)
audio_plugins/_SPARTA_pitchShifter_/: CMakeLists.txt  sparta_pitchShifter.jucer
audio_plugins/_SPARTA_powermap_/: CMakeLists.txt  sparta_powermap.jucer
audio_plugins/_SPARTA_rotator_/: CMakeLists.txt  sparta_rotator.jucer
audio_plugins/_SPARTA_sldoa_/: CMakeLists.txt  sparta_sldoa.jucer
audio_plugins/_SPARTA_spreader_/: CMakeLists.txt  sparta_spreader.jucer
audio_plugins/_SPARTA_trackerTest_/: CMakeLists.txt  sparta_trackerTest.jucer
audio_plugins/_SPARTA_tvConv_/: sparta_tvconv.jucer
audio_plugins/resources/: ConfigurationHelper.h  ParameterManager.h  SPARTALookAndFeel.h
(+1076 files in other folders)
